<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DrawerControllerActivity">
    <item
        android:id="@+id/action_history"
        android:orderInCategory="1"
        android:title="@string/basic_History"
        />
    <item
        android:id="@+id/action_make_deposit"
        android:orderInCategory="2"
        android:title="@string/basic_Make_Deposit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clean"
        android:orderInCategory="3"
        android:title="@string/basic_Clean_Drawer"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action_cleaning_settings"
                android:orderInCategory="11"
                android:title="@string/basic_Cleaning_Settings"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_config_size_editor"
                android:orderInCategory="8"
                android:title="@string/basic_Edit_Layout_Size"
                app:showAsAction="never" />
        </menu>

    </item>



</menu>
