<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnNew"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:text="@string/basic_New"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        style="@style/AppTheme.ActionBarButtons"
        android:background="#ffffffff"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

    <Spinner
        android:id="@+id/spinnerDrawerList"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:spinnerMode="dropdown" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:id="@+id/layout_AB_SwappableArea">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_AB_DrawerTotal"
            android:paddingLeft="5dp"
            android:paddingStart="5dp"
            android:alpha="255"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:background="#ffffff"
                android:gravity="start|center_vertical"
                android:singleLine="true"
                android:text="@string/basic_TOTAL"
                android:textSize="28sp"
                android:textStyle="bold|italic"
                android:textColor="#33000000"
                android:paddingLeft="10dp"/>

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:gravity="center_vertical|end"
                android:paddingRight="5dp"
                android:paddingEnd="5dp"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000000" />

        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/layout_AB_ConfigEditButtons"
            android:paddingLeft="5dp"
            android:alpha="00">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/basic_New"
                android:id="@+id/btnNewConfig"
                style="@style/AppTheme.ActionBarButtons"
                android:layout_weight="1"
                android:textStyle="bold|italic"
                android:background="#ffffffff"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="12dp"
                android:layout_marginEnd="12dp"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/basic_Delete"
                android:id="@+id/btnDeleteConfig"
                style="@style/AppTheme.ActionBarButtons"
                android:layout_weight="1"
                android:textStyle="bold|italic"
                android:background="#ffffffff"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ActionBar_GoToLayoutEditor"
            android:id="@+id/btnGoToLayoutEditor"
            style="@style/AppTheme.ActionBarButtons"
            android:textStyle="bold|italic"
            android:alpha="00"
            android:clickable="false"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/PureWhite"
            android:layout_marginLeft="5dp" />
    </RelativeLayout>

    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/etHiddenActionBar"
        android:background="#00ffffff"
        android:singleLine="true"
        android:inputType="text"
        android:imeOptions="actionDone"/>

</LinearLayout>