<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.brent.harman.lazyregister.CheckBinViewFragment"
    android:background="@drawable/cloudy_green_white_1"
    android:id="@+id/miscBinViewLayout"
    android:clickable="true">
    <!-- Setting ^ clickable so that calls can't go through to the fragment behind -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:id="@+id/leftLayout">


        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerChecksList"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutInputAmount"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/basic_AMOUNT"
                android:id="@+id/tvInputForegroundAmount"
                android:gravity="left|center_vertical"
                android:textStyle="bold|italic"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_centerVertical="true"
                android:background="@color/BinViewData_InputBackground"
                android:textColor="@color/MiscBinViewData_MiscLabelColor"
                android:clickable="false"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/etInputAmount"
                android:gravity="center_vertical|right"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutInputName"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/basic_NAME"
                android:id="@+id/tvInputForegroundName"
                android:gravity="left|center_vertical"
                android:textStyle="bold|italic"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_centerVertical="true"
                android:background="@color/BinViewData_InputBackground"
                android:textColor="@color/MiscBinViewData_MiscLabelColor"
                android:clickable="false"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/etInputName"
                android:gravity="center_vertical|right"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:inputType="textPersonName"
                android:imeOptions="actionDone" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutInputPhone"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/basic_PHONE"
                android:id="@+id/tvInputForeground"
                android:gravity="left|center_vertical"
                android:textStyle="bold|italic"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_centerVertical="true"
                android:background="@color/BinViewData_InputBackground"
                android:textColor="@color/MiscBinViewData_MiscLabelColor"
                android:clickable="false"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/etInputPhone"
                android:gravity="center_vertical|right"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_centerVertical="true"
                android:singleLine="true"
                android:inputType="phone"
                android:imeOptions="actionDone"/>

        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_New"
                android:id="@+id/btnNewCheck"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@color/NiceBlue"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/PureWhite"
                android:textStyle="bold|italic"
                android:textSize="24sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basic_Delete"
                android:id="@+id/btnDeleteCheck"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:background="@color/NiceBlue"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/PureWhite"
                android:textStyle="bold|italic"
                android:textSize="24sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="3"
        android:id="@+id/rightLayout">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/BinViewData_InputBackground"
                android:textColor="@color/MiscBinViewData_NotesLabelColor"
                android:text="@string/basic_NOTES"
                android:textSize="60dp"
                android:textStyle="bold|italic"
                android:gravity="center_vertical|center_horizontal"
                android:paddingBottom="10dp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/etCheckNotes"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/MiscBinView_InitialNoteText"
                    android:padding="10dp"
                    android:gravity="top|left"
                    android:textStyle="italic"
                    android:background="@color/MiscBinViewData_NotesETBackground"
                    android:imeOptions="actionDone" />

            </ScrollView>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
