<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.brent.harman.lazyregister.CleaningSettingsFragment"
    android:background="@drawable/square_green_to_white_1"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:id="@+id/layoutCleaningSettingsFragment">


    <!--<LinearLayout-->
        <!--android:orientation="horizontal"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_marginRight="5dp">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="@string/CleaningSettingsFragment_Rules"-->
            <!--android:id="@+id/tvRulesLabel"-->
            <!--android:layout_below="@+id/layout_CleaningSettingsMinMaxNew"-->
            <!--android:layout_alignLeft="@+id/layout_CleaningSettingsMinMaxNew"-->
            <!--android:layout_alignStart="@+id/layout_CleaningSettingsMinMaxNew"-->
            <!--android:layout_gravity="center_vertical|right"-->
            <!--android:gravity="right" />-->

        <!--<EditText-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/etCleanerName"-->
            <!--android:layout_below="@+id/layout_CleaningSettingsMinMaxNew"-->
            <!--android:layout_toRightOf="@+id/tvRulesLabel"-->
            <!--android:layout_toEndOf="@+id/tvRulesLabel"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginStart="31dp"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:textStyle="bold|italic"-->
            <!--android:gravity="bottom|center_horizontal"-->
            <!--android:text="Sample Cleaner Name"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:singleLine="true"-->
            <!--android:selectAllOnFocus="true" />-->

        <!--<CheckBox-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Remove Miscellaneous"-->
            <!--android:id="@+id/checkBoxRemoveMisc"-->
            <!--android:checked="false"-->
            <!--android:layout_above="@+id/scrollViewRuleEditors"-->
            <!--android:layout_alignLeft="@+id/etCleanerName"-->
            <!--android:layout_alignStart="@+id/etCleanerName"-->
            <!--android:layout_gravity="center_vertical|right"-->
            <!--android:layout_marginLeft="10dp" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="bottom|center_horizontal"
        android:id="@+id/layout_CleaningSettingsMinMaxNew"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/CleaningSettingsFragment_TargetMinMaxText_1"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etTargetMinMax_1"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:imeOptions="actionDone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/basic_and"
            android:id="@+id/textView4"
            android:layout_gravity="center_vertical" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/etTargetMinMax_2"
            android:layout_weight="1"
            android:gravity="top|center_horizontal"
            android:singleLine="true"
            android:selectAllOnFocus="true"
            android:imeOptions="actionDone"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CleaningSettingsFragment_Add_Rule"
            android:id="@+id/btnAddRule"
            android:layout_marginLeft="15dp"
            android:background="@color/NiceBlue"
            android:textColor="@color/PureWhite"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginRight="5dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/scrollViewRuleEditors"
        android:layout_below="@+id/tvRulesLabel"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:background="#ffffff"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/layout_RulesEditor"></LinearLayout>
    </ScrollView>

</LinearLayout>
